@@ -110,6 +110,8 @@ check_if_png(char *file_name, FILE **fp) {
    return(!png_sig_cmp((png_bytep)buf, (png_size_t)0, PNG_BYTES_TO_CHECK));
 }
 
+static void get_png_tags(i_img *im, png_structp png_ptr, png_infop info_ptr);
+
 /* Read a PNG file.  You may want to return an error code if the read
  * fails (depending upon the failure).  There are two "prototypes" given
  * here - one where we are given the filename, and we need to open the
@@ -246,6 +248,9 @@ i_readpng(int fd) {
   /* read rest of file, and get additional chunks in info_ptr - REQUIRED */
   
   png_read_end(png_ptr, info_ptr); 
+
+  get_png_tags(im, png_ptr, info_ptr);
+
   /* clean up after the read, and free any memory allocated - REQUIRED */
   png_destroy_read_struct(&png_ptr, &info_ptr, (png_infopp)NULL);
 
@@ -263,6 +268,10 @@ i_writepng(i_img *im,int fd) {
   png_infop info_ptr;
   int width,height,y;
   volatile int cspace,channels;
+  double xres, yres;
+  int aspect_only, have_res;
+  double offx, offy;
+  char offunit[20] = "pixel";
 
   mm_log((1,"i_writepng(0x%x,fd %d)\n",im,fd));
   
@@ -330,6 +339,28 @@ i_writepng(i_img *im,int fd) {
 
   png_set_IHDR(png_ptr, info_ptr, width, height, 8, cspace,
 	       PNG_INTERLACE_NONE, PNG_COMPRESSION_TYPE_BASE, PNG_FILTER_TYPE_BASE);
+
+  have_res = 1;
+  if (i_tags_get_float(&im->tags, "i_xres", 0, &xres)) {
+    if (i_tags_get_float(&im->tags, "i_yres", 0, &yres))
+      ; /* nothing to do */
+    else
+      yres = xres;
+  }
+  else {
+    if (i_tags_get_float(&im->tags, "i_yres", 0, &yres))
+      xres = yres;
+    else
+      have_res = 0;
+  }
+  if (have_res) {
+    aspect_only = 0;
+    i_tags_get_int(&im->tags, "i_aspect_only", 0, &aspect_only);
+    xres /= 0.0254;
+    yres /= 0.0254;
+    png_set_pHYs(png_ptr, info_ptr, xres + 0.5, yres + 0.5, 
+                 aspect_only ? PNG_RESOLUTION_UNKNOWN : PNG_RESOLUTION_METER);
+  }
 
   png_write_info(png_ptr, info_ptr);
   if (!im->virtual && im->type == i_direct_type && im->bits == i_8_bits) {
@@ -432,6 +463,8 @@ i_readpng_scalar(char *data, int length) {
     for (y = 0; y < height; y++) { png_read_row(png_ptr,(png_bytep) &(im->idata[channels*width*y]), NULL); }
   mm_log((1,"made it to here 2\n"));
   png_read_end(png_ptr, info_ptr); 
+  get_png_tags(im, png_ptr, info_ptr);
+
   mm_log((1,"made it to here 3\n"));
   png_destroy_read_struct(&png_ptr, &info_ptr, (png_infopp)NULL);
   mm_log((1,"made it to here 4\n"));
@@ -516,3 +549,21 @@ i_readpng_scalar(char *data, int length) {
 
 /*   return im; */
 /* } */
+
+static void get_png_tags(i_img *im, png_structp png_ptr, png_infop info_ptr) {
+  png_uint_32 xres, yres;
+  int unit_type;
+  if (png_get_pHYs(png_ptr, info_ptr, &xres, &yres, &unit_type)) {
+    mm_log((1,"pHYs (%d, %d) %d\n", xres, yres, unit_type));
+    if (unit_type == PNG_RESOLUTION_METER) {
+      i_tags_set_float(&im->tags, "i_xres", 0, xres * 0.0254);
+      i_tags_set_float(&im->tags, "i_yres", 0, xres * 0.0254);
+    }
+    else {
+      i_tags_addn(&im->tags, "i_xres", 0, xres);
+      i_tags_addn(&im->tags, "i_yres", 0, yres);
+      i_tags_addn(&im->tags, "i_aspect_only", 0, 1);
+    }
+  }
+}
+
